# actix-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  flake.nix  sqlx-data.json
migrations/: 20240210123852_create_subscription_table.sql  20240817100505_make_status_not_null_in_subscriptions.sql
src/: configuration.rs  email_client.rs  errors.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs  subscriptions_revoke.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs  subscriptions_confirm.rs  subscriptions_revoke.rs
