[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.34"
config = "0.14.0"
serde = {version = "1.0.196", features = ["derive"]}
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
uuid = {version = "0.8.2", features = ["v4"]}

[dependencies.sqlx]
version="0.5.7"
default-features= false
features=[
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
