[package]
name = "actix-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "actix_server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.34"
config = "0.14.0"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
serde = {version = "1.0.196", features = ["derive"]}
serde-aux = "3"
tokio = {version = "1.35.1", features = ["macros", "rt-multi-thread"]}
uuid = {version = "0.8.2", features = ["v4"]}
secrecy = {version = "0.8", features = ["serde"]}
[dependencies.sqlx]
version="0.5.7"
default-features= false
features=[
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
